# CORNET

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/prompts/: opsx-discuss.prompt.md
.github/workflows/: test.yml
cornet/: __init__.py  __main__.py  context.py  orchestrator.py
cornet/bridges/: ros1_bridge.py  ros2_bridge.py
cornet/config/: __init__.py  loader.py  schema.py
cornet/eval/: __init__.py  base.py
cornet/gazebo/: __init__.py  generic_launch.py
cornet/leaderboard/: __init__.py  viewer.py  writer.py
cornet/middleware/: __init__.py  aoi.py  clock.py  dispatcher.py  tun.py
cornet/plugins/: __init__.py  base.py
cornet/scenarios/: README.md  __init__.py
cornet/sweep/: __init__.py  expander.py
cornet/ui/: server.py
docs/: ARCHITECTURE.md  GETTING_STARTED.md  INSTALL.md  LINEAGE.md
docs/guides/: custom-eval-tool.md  custom-plugin.md  middleware.md  parameter-sweep.md  writing-a-task.md
docs/reference/: cli.md  config-schema.md  leaderboard-format.md
openspec/: config.yaml
scripts/: check_ns3_compat.py  gen_schema_docs.py
scripts/install/: install_gazebo_ros2.sh  install_mininet.sh  install_ns3.sh  install_python.sh  verify.sh
tasks/aoi_5phase_eval/: config.yaml
tests/: __init__.py  test_eval_tool.py  test_example_task_leaderboard_flow.py  test_example_tasks.py  test_generic_launch.py  test_leaderboard.py  test_middleware.py  test_mininet_plugin.py  test_ns3_plugin.py  test_plugin_lifecycle.py  test_scenario_integration.py  test_scenario_smoke.py  test_sweep_expander.py  test_ui_server.py  test_ui_variant_filter.py  test_unified_config.py
(+100 files in other folders)
